--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,18 +3,89 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  margin: 0;
 }
 
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+* {
+  box-sizing: border-box;
+}
+form {
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+}
+input,
+button {
+  border: none;
+  outline: none;
+  border-radius: 3px;
+}
+input {
+  width: 100%;
+  height: 42px;
+  background: #f9f0da;
+  padding-left: 15px;
+}
+button {
+  height: 26px;
+  width: 26px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: #f15b42;
+  cursor: pointer;
+}
+button:before {
+  content: '\f105';
+  font-family: FontAwesome;
+  color: #f9f0da;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.background-form {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #dabb52;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.image-info {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-bottom: -20px;
+}
+
+.image-box {
+  width: 400px;
+  height: 400px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.about-img {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  padding-top: 15px;
+}
+
+.number {
+  text-align: center;
+  font-weight: 400;
+}
+
+.name-numbers {
+  font-weight: 700;
 }
